# movitzs-chess-gui

./: Cargo.toml  README.md  build.rs.x  chess.proto  default.nix
src/: main.rs  net.rs
